atualizando os codigos, form e main

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,161 +1,232 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>#{get 'title' /}</title>
-        <meta charset="${_response_encoding}">
-        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
-           <link rel="stylesheet" media="screen" href="@{'/public/bootstrap-5.3.6/css/bootstrap.min.css'}">
-        #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-    </head>
-    <body>
-		
-		<header id="header" class="header sticky-top">
+<head>
+<title>#{get 'title' /}</title>
+<meta charset="${_response_encoding}">
+<link rel="stylesheet" media="screen"
+	href="@{'/public/stylesheets/main.css'}">
+<link rel="stylesheet" media="screen"
+	href="@{'/public/bootstrap-5.3.6/css/bootstrap.min.css'}">
+#{get 'moreStyles' /}
+<link rel="shortcut icon" type="image/png"
+	href="@{'/public/images/favicon.png'}">
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<title>Index - Medilab Bootstrap Template</title>
+<meta name="description" content="">
+<meta name="keywords" content="">
 
-		    <div class="topbar d-flex align-items-center">
-		      <div class="container d-flex justify-content-center justify-content-md-between">
-		        <div class="contact-info d-flex align-items-center">
-		          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">projecti@gmail.com</a></i>
-		          <i class="bi bi-phone d-flex align-items-center ms-4"><span>4002-8922</span></i>
-		        </div>
-		        <div class="social-links d-none d-md-flex align-items-center">
-		          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-		          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-		          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-		          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-		        </div>
-		      </div>
-		    </div><!-- End Top Bar -->
+<!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-		    <div class="branding d-flex align-items-center">
+  <!-- Vendor CSS Files -->
+  <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+  <link rel="stylesheet" media="screen" href="@{'/public/bootstrap-5.3.6/css/bootstrap.min.css'}">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-		      <div class="container position-relative d-flex align-items-center justify-content-between">
-		        <a href="/pessoas/form" class="logo d-flex align-items-center me-auto">
-		          <!-- Uncomment the line below if you also wish to use an image logo -->
-		          <!-- <img src="assets/img/logo.png" alt=""> -->
-		          <h1 class="sitename">ProjecTI</h1>
-		        </a>
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
-		      <a class="cta-btn d-none d-sm-block" href="@{Logins.logar()}" class="login-link">
-						       Login</a>
-					
+</head>
+<body>
 
-		      </div>
+	<body class="index-page">
 
-		    </div>
+  <header id="header" class="header sticky-top">
 
-		  </header>
-		  #{if flash.error}
-		  					  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-		  					    <strong>Algo deu errado:</strong> ${flash.error}
-		  					    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-		  					  </div>
-		  					#{/if}
-		  		    		
-		  		    		#{if flash.success}
-		  					  <div class="alert alert-success alert-dismissible fade show" role="alert">
-		  					    <strong>Sucesso!</strong> ${flash.success}
-		  					    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-		  					  </div>
-		  					#{/if}
-		  #{if session['usuarioLogado']}
-						<p>
-							${session['usuarioLogado']}
-							<a href="@{Logins.logout}">Logout</a>
-						</p>
-					#{/if}
-        <div class="container">
-    		<h1>#{get 'title' /}</h1>
-			<hr />
-    	
-        	#{doLayout /}
+    <div class="topbar d-flex align-items-center">
+      <div class="container d-flex justify-content-center justify-content-md-between">
+        <div class="contact-info d-flex align-items-center">
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">netinhodavo@gmail.com</a></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><span>4002-8922</span></i>
+        </div>
+        <div class="social-links d-none d-md-flex align-items-center">
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
+    </div><!-- End Top Bar -->
 
-        </div>	
-		
-         <script src="@{'/public/bootstrap-5.3.6/js/bootstrap.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-        <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-         #{get 'moreScripts' /}
-    </body>
-	<footer id="footer" class="footer light-background">
+    <div class="branding d-flex align-items-center">
 
-	   <div class="container footer-top">
-	     <div class="row gy-4">
-	       <div class="col-lg-4 col-md-6 footer-about">
-	         <a href="index.html" class="logo d-flex align-items-center">
-	           <span class="sitename">ProjecTI</span>
-	         </a>
-	         <div class="footer-contact pt-3">
-	           <p>IFRN-Campus João Câmara</p>
-	           <p>João Câmara/RN </p>
-	           <p class="mt-3"><strong>Telefone:</strong> <span>4002-8922</span></p>
-	           <p><strong>Email:</strong> <span>projecti@gmail.com</span></p>
-	         </div>
-	         <div class="social-links d-flex mt-4">
-	           <a href=""><i class="bi bi-twitter-x"></i></a>
-	           <a href=""><i class="bi bi-facebook"></i></a>
-	           <a href=""><i class="bi bi-instagram"></i></a>
-	           <a href=""><i class="bi bi-linkedin"></i></a>
-	         </div>
-	       </div>
+      <div class="container position-relative d-flex align-items-center justify-content-between">
+        <a href="@{Pessoas.form()}" class="logo d-flex align-items-center me-auto">
+          <!-- Uncomment the line below if you also wish to use an image logo -->
+          <!-- <img src="assets/img/logo.png" alt=""> -->
+          <h1 class="sitename">Netinho da Vó</h1>
+        </a>
 
-	       <div class="col-lg-2 col-md-3 footer-links">
-	         <h4>Useful Links</h4>
-	         <ul>
-	           <li><a href="#">Home</a></li>
-	           <li><a href="#">About us</a></li>
-	           <li><a href="#">Services</a></li>
-	           <li><a href="#">Terms of service</a></li>
-	           <li><a href="#">Privacy policy</a></li>
-	         </ul>
-	       </div>
+        <a class="cta-btn d-none d-sm-block" href="/pessoas/form#contact">Como podemos ajudar?</a>
+        <nav id="navmenu" class="navmenu">
+          <ul>
+            <li><a href="#hero" class="active">Home<br></a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#services">Serviços</a></li>
+            <li><a href="#departments">Erros frequentes</a></li>
+            <li><a href="#doctors">Responsaveis</a></li>
+            <li><a href="#contact">Contato</a></li>
+          </ul>
+          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        </nav>
 
-	       <div class="col-lg-2 col-md-3 footer-links">
-	         <h4>Our Services</h4>
-	         <ul>
-	           <li><a href="#">Web Design</a></li>
-	           <li><a href="#">Web Development</a></li>
-	           <li><a href="#">Product Management</a></li>
-	           <li><a href="#">Marketing</a></li>
-	           <li><a href="#">Graphic Design</a></li>
-	         </ul>
-	       </div>
+       <a class="cta-btn d-none d-sm-block" href="@{Logins.logar()}"
+					class="login-link"> Login</a>
 
-	       <div class="col-lg-2 col-md-3 footer-links">
-	         <h4>Hic solutasetp</h4>
-	         <ul>
-	           <li><a href="#">Molestiae accusamus iure</a></li>
-	           <li><a href="#">Excepturi dignissimos</a></li>
-	           <li><a href="#">Suscipit distinctio</a></li>
-	           <li><a href="#">Dilecta</a></li>
-	           <li><a href="#">Sit quas consectetur</a></li>
-	         </ul>
-	       </div>
+      </div>
 
-	       <div class="col-lg-2 col-md-3 footer-links">
-	         <h4>Nobis illum</h4>
-	         <ul>
-	           <li><a href="#">Ipsam</a></li>
-	           <li><a href="#">Laudantium dolorum</a></li>
-	           <li><a href="#">Dinera</a></li>
-	           <li><a href="#">Trodelas</a></li>
-	           <li><a href="#">Flexo</a></li>
-	         </ul>
-	       </div>
+    </div>
 
-	     </div>
-	   </div>
+  </header> 
+	#{if flash.error}
+	<div class="alert alert-danger alert-dismissible fade show"
+		role="alert">
+		<strong>Algo deu errado:</strong> ${flash.error}
+		<button type="button" class="btn-close" data-bs-dismiss="alert"
+			aria-label="Close"></button>
+	</div>
+	#{/if} #{if flash.success}
+	<div class="alert alert-success alert-dismissible fade show"
+		role="alert">
+		<strong>Sucesso!</strong> ${flash.success}
+		<button type="button" class="btn-close" data-bs-dismiss="alert"
+			aria-label="Close"></button>
+	</div>
+	#{/if} #{if session['usuarioLogado']}
+	<p>
+		${session['usuarioLogado']} <a href="@{Logins.logout}">Logout</a>
+	</p>
+	#{/if}
+	<div class="container">
+		<h1>#{get 'title' /}</h1>
+		<hr />
 
-	   <div class="container copyright text-center mt-4">
-	     <p>© <span>Copyright</span> <strong class="px-1 sitename">ProjecTI</strong> <span>All Rights Reserved</span></p>
-	     <div class="credits">
-	       <!-- All the links in the footer should remain intact. -->
-	       <!-- You can delete the links only if you've purchased the pro version. -->
-	       <!-- Licensing information: https://bootstrapmade.com/license/ -->
-	       <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-	       Designed by <a href="https://bootstrapmade.com/">Pedriin</a> Distributed by <a href=“https://themewagon.com>PI
-	     </div>
-	   </div>
+		#{doLayout /}
 
-	 </footer>
+	</div>
+	
+	
+
+	<script src="@{'/public/bootstrap-5.3.6/js/bootstrap.min.js'}"
+		type="text/javascript" charset="${_response_encoding}"></script>
+	<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"
+		type="text/javascript" charset="${_response_encoding}"></script>
+	#{get 'moreScripts' /}
+</body>
+<footer id="footer" class="footer light-background">
+
+	<div class="container footer-top">
+		<div class="row gy-4">
+			<div class="col-lg-4 col-md-6 footer-about">
+				<a href="@{Pessoas.form()}" class="logo d-flex align-items-center"> <span
+					class="sitename">ProjecTI</span>
+				</a>
+				<div class="footer-contact pt-3">
+					<p>IFRN-Campus João Câmara</p>
+					<p>João Câmara/RN</p>
+					<p class="mt-3">
+						<strong>Telefone:</strong> <span>4002-8922</span>
+					</p>
+					<p>
+						<strong>Email:</strong> <span>netinhodavo@gmail.com</span>
+					</p>
+				</div>
+				<div class="social-links d-flex mt-4">
+					<a href=""><i class="bi bi-twitter-x"></i></a> <a href=""><i
+						class="bi bi-facebook"></i></a> <a href=""><i
+						class="bi bi-instagram"></i></a> <a href=""><i
+						class="bi bi-linkedin"></i></a>
+				</div>
+			</div>
+
+			<div class="col-lg-2 col-md-3 footer-links">
+				<h4>Useful Links</h4>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About us</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Terms of service</a></li>
+					<li><a href="#">Privacy policy</a></li>
+				</ul>
+			</div>
+
+			<div class="col-lg-2 col-md-3 footer-links">
+				<h4>Our Services</h4>
+				<ul>
+					<li><a href="#">Web Design</a></li>
+					<li><a href="#">Web Development</a></li>
+					<li><a href="#">Product Management</a></li>
+					<li><a href="#">Marketing</a></li>
+					<li><a href="#">Graphic Design</a></li>
+				</ul>
+			</div>
+
+			<div class="col-lg-2 col-md-3 footer-links">
+				<h4>Hic solutasetp</h4>
+				<ul>
+					<li><a href="#">Molestiae accusamus iure</a></li>
+					<li><a href="#">Excepturi dignissimos</a></li>
+					<li><a href="#">Suscipit distinctio</a></li>
+					<li><a href="#">Dilecta</a></li>
+					<li><a href="#">Sit quas consectetur</a></li>
+				</ul>
+			</div>
+
+			<div class="col-lg-2 col-md-3 footer-links">
+				<h4>Nobis illum</h4>
+				<ul>
+					<li><a href="#">Ipsam</a></li>
+					<li><a href="#">Laudantium dolorum</a></li>
+					<li><a href="#">Dinera</a></li>
+					<li><a href="#">Trodelas</a></li>
+					<li><a href="#">Flexo</a></li>
+				</ul>
+			</div>
+
+		</div>
+	</div>
+
+	<div class="container copyright text-center mt-4">
+		<p>
+			© <span>Copyright</span> <strong class="px-1 sitename">ProjecTI</strong>
+			<span>All Rights Reserved</span>
+		</p>
+		<div class="credits">
+			<!-- All the links in the footer should remain intact. -->
+			<!-- You can delete the links only if you've purchased the pro version. -->
+			<!-- Licensing information: https://bootstrapmade.com/license/ -->
+			<!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+			Designed by <a href="https://bootstrapmade.com/">Pedriin</a>
+			Distributed by <a href=“https://themewagon.com>PI 
+		</div>
+	</div>
+
+</footer>
+<!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </html>
